--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,13 @@
-# editor / temp
-*~
-*.swp
-*.bak
+# Logs and temp
+*.log
 *.tmp
 
-# logs and outputs
-*.log
-*.out
-lammps_*.log
-lammps_*.out
+# Archives and large data
+*.tar.gz
+*.zip
 
-# data temp files
-glc_dimer_v3.data.tmp*
-in.dimer_glc.*.tmp*
-dump.*
-grep_matches.txt
-hashes_*.txt
-
-# OS
+# OS and editor
 .DS_Store
 Thumbs.db
-
-# OneDrive temp
-~$*
+.vscode/
+.idea/
